--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@splidejs/splide": "^4.1.4",
-    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "splide-nextjs": "^2.4.23",
-    "swiper": "^11.0.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
